<resources>
    <string name="app_name">My Application2020</string>
    <string name="title">I am Rich</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="login_main">Login</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register1">Register</string>
</resources>
