<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/log1">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="105dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/dreamsonic" />

    <EditText
        android:id="@+id/edittext_rusername"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#D1B58D"
        android:hint="@string/username"
        android:paddingLeft="4dp"
        android:shadowColor="@color/buttoncolor"
        android:textColorHighlight="@color/buttoncolor" />

    <EditText
        android:id="@+id/edittext_rpassword"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#D1B58D"
        android:fadingEdge="horizontal"
        android:hint="@string/password"
        android:paddingLeft="4dp"
        android:password="true"
        android:shadowColor="#96B878D1"
        android:textColor="#000000"
        android:textColorHighlight="@color/buttoncolor" />
    <EditText
        android:id="@+id/edittext_confirmpassword"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#D1B58D"
        android:fadingEdge="horizontal"
        android:hint="@string/repeat_password"
        android:paddingLeft="4dp"
        android:password="true"
        android:shadowColor="#96B878D1"
        android:textColor="#000000"
        android:textColorHighlight="@color/buttoncolor" />




    <Button
        android:id="@+id/button_register"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="#B9BF87D5"
        android:text="@string/register1"/>




</LinearLayout>
